syntax = "proto3";
option go_package = "/gen";

message Metadata {
  string id = 1;
  string title = 2;
  string description = 3;
  string director = 4;
}

message MovieDetails {
  float rating = 1;
  Metadata metadata = 2;
}

message GetMetadataByIdRequest {
  string movie_id = 1;
}

message GetMetadataByIdResponse {
  Metadata metadata = 1;
}

service MetadataService {
  rpc GetMetadataById(GetMetadataByIdRequest) returns (GetMetadataByIdResponse);
}

message GetAggregattedRatingRequest {
  string record_id = 1;
  string record_type = 2;
}

message GetAggregattedRatingResponse {
  double rating_value = 1;
}

message PutRattingRequest {
  string user_id = 1;
  string record_id = 2;
  string record_type = 3;
  int32 rating_value = 4;
}

message PutRattingResponse {}

service RatingService {
  rpc GetAggregattedRating(GetAggregattedRatingRequest) returns (GetAggregattedRatingResponse);
  rpc PutRating(PutRattingRequest) returns (PutRattingResponse);
}

message GetMovieDetailsRequest {
  string movie_id = 1;
}

message GetMovieDetailsResponse {
  MovieDetails movie_details = 1;
}

service MovieService {
  rpc GetMovieDetails(GetMovieDetailsRequest) returns (GetMovieDetailsResponse);
}
